--- a/installupdates.yml
+++ b/installupdates.yml
@@ -1,6 +1,9 @@
 ---
 - name: Install RHEL updates
-  register: yum_updates
-  ansible.builtin.package:
-    name: '*'
-    state: latest
+  hosts: all
+
+  tasks: 
+    - name: Install RHEL updates
+      ansible.builtin.package:
+        name: '*'
+        state: latest
