--- a/install.yml
+++ b/install.yml
@@ -1,8 +1,11 @@
 ---
 - name: Install vim and tree via dnf
-  become: true
-  ansible.builtin.package:
-    name:
-      - vim
-      - tree
-    state: present
+  hosts: all
+
+  tasks:
+  - name: Install vim and tree via dnf
+    ansible.builtin.package:
+      name:
+        - vim
+        - tree
+      state: latest
