--- a/updatecheck.yml
+++ b/updatecheck.yml
@@ -1,8 +1,13 @@
 ---
 - name: Check for RHEL updates
-  ansible.builtin.shell: yum list updates | awk 'f;/Updated Packages/{f=1;}' | awk '{
-    print $1 }'
-  changed_when: updates.stdout_lines | length > 0
-  args:
-    warn: false
-  register: updates
+  hosts: all
+  tasks:
+
+  - name: Check for RHEL updates
+    ansible.builtin.shell: yum list updates | awk 'f;/Updated Packages/{f=1;}' | awk '{
+      print $1 }'
+    changed_when: updates.stdout_lines | length > 0
+    args:
+      warn: false
+    register: updates
+    when: updates.stdout_lines | length > 0
