--- a/installupdates.yml
+++ b/installupdates.yml
@@ -1,8 +1,12 @@
 ---
-- name: Install RHEL updates
-  hosts: all
+- hosts: all
+  become: yes
   tasks:
-    - name: Install RHEL updates
-      ansible.builtin.package:
-        name: '*'
-        state: latest
+  - name: Check for updates
+    yum:
+      name: "*"
+      state: latest
+      update_cache: yes
+  - name: Reboot if kernel was updated
+    command: sudo reboot
+    when: ansible_facts.kernel.release.major != ansible_facts.previous_kernel.release.major
