--- a/reboot.yml
+++ b/reboot.yml
@@ -4,3 +4,8 @@
   tasks:
   - name: Reboot RHEL
     shell: reboot
+  - name: Wait for hosts to come back up
+    wait_for:
+      host: "{{ inventory_hostname }}"
+      port: 22
+      timeout: 300
